--- a/pages/home/style.module.scss
+++ b/pages/home/style.module.scss
@@ -18,8 +18,13 @@
     margin: 0 auto 80px;
     line-height: 40px;
     color: #fff;
+    a {
+      color: #fff;
+    }
     h3 {
       cursor: pointer;
+      color: #fff;
+      font-size: 20px;
     }
     ul {
       display: flex;
@@ -28,6 +33,7 @@
         cursor: pointer;
         font-size: 16px;
       }
+      
     }
   }
 }
