增加些租房页面的内容

--- a/pages/home/component/search/style.module.scss
+++ b/pages/home/component/search/style.module.scss
@@ -31,7 +31,7 @@
     display: block;
     width: 24px;
     height: 24px;
-    background-image: url("../../../public/icons/map.png");
+    background-image: url("../../../../public/icons/map.png");
     background-size: cover;
     margin-right: 2px;
   }
