--- a/components/modal/style.module.scss
+++ b/components/modal/style.module.scss
@@ -6,4 +6,31 @@
   left: 0;
   right: 0;
   background-color: rgba(0,0,0,0.6);
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.wrap {
+  position: relative;
+  top: -100px;
+  background-color: #fff;
+  padding: 10px 20px;
+  header {
+    display: flex;
+    justify-content: space-between;
+    font-size: 22px;
+    p {
+      line-height: 36px;
+    }
+  }
+}
+.closeIcon {
+  font-size: 18px;
+  cursor: pointer;
+  position: relative;
+  top: 7px;
 }
