--- a/pages/renting/style.module.scss
+++ b/pages/renting/style.module.scss
@@ -58,14 +58,14 @@
   width: 80%;
   max-width: 1150px;
   min-width: 700px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   padding: 20px 0;
 }
 .navItem {
   line-height: 26px;
-  font-size: 16px;
+  font-size: 15px;
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .label {
   width: 50px;
@@ -82,4 +82,118 @@
 }
 .activeTag {
   color: #00ae66;
+}
+/**
+  搜索结果展示
+*/
+.searchResult {
+  width: 80%;
+  max-width: 1150px;
+  min-width: 700px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  line-height: 24px;
+  p {
+    font-weight: 500;
+    font-size: 18px;
+    span {
+      color: #00ae66;
+    }
+  }
+  i {
+    font-style: normal;
+    color: #bbb;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 14px;
+  }
+}
+/**
+  搜索内容后的tabs
+*/
+.tabs {
+  width: 80%;
+  max-width: 1150px;
+  min-width: 700px;
+  margin: 0 auto;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  li {
+    line-height: 28px;
+    height: 68px;
+    font-style: 18px;
+    color: #333;
+    margin-bottom: -2px;
+    padding: 20px 15px;
+    cursor: pointer;
+  }
+}
+.activeTab {
+  color: #00ae66 !important;
+  border-bottom: 3px solid #00ae66;
+}
+/**
+  搜索内容房子card展示
+*/
+.roomBox {
+  width: 80%;
+  max-width: 1150px;
+  min-width: 700px;
+  margin: 0 auto;
+  padding-bottom: 10px;
+  li {
+    margin: 25px 0;
+    display: flex;
+    img {
+      cursor: pointer;
+      width: 160px;
+      height: 122px;
+      border-radius: 5px;
+      margin-right: 20px;
+    }
+  }
+}
+.roomInfo {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+}
+.roomDes {
+  h4 {
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 500;
+  }
+}
+.roomDetail {
+  display: flex;
+  margin-bottom: 20px;
+  span {
+    color: #999;
+    margin-right: 15px;
+  }
+}
+.roomTagBox {
+  display: flex;
+  span {
+    line-height: 24px;
+    font-size: 14px;
+    color: #999;
+    background-color: rgba($color: #eee, $alpha: 0.3);
+    border-radius: 4px;
+    padding: 0 10px;
+    margin-right: 15px;
+  }
+}
+.price {
+  line-height: 28px;
+  font-size: 14px;
+  color: #fa5741;
+  span {
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: 10px;
+  }
 }
