:sparkles:开发新功能

--- a/pages/home/component/loginForm/style.module.scss
+++ b/pages/home/component/loginForm/style.module.scss
@@ -25,4 +25,14 @@
     font-weight: 400;
     cursor: pointer;
   }
+  i {
+    color: red;
+  }
+  span {
+    color: #00ae66;
+    display: block;
+    width: 60px;
+    margin: 10px 0 20px 0;
+    cursor: pointer;
+  }
 }
