--- a/pages/publish/components/tagDialog/style.module.scss
+++ b/pages/publish/components/tagDialog/style.module.scss
@@ -1,6 +1,6 @@
 .wrap {
   width: 640px;
-  padding: 34px 0 10px 0;
+  padding: 20px 0 10px 0;
   section {
     padding: 5px 0;
     display: flex;
@@ -10,6 +10,10 @@
       font-size: 16px;
     }
   }
+}
+.description {
+  color: #999;
+  margin-bottom: 10px;
 }
 .tagBox {
   flex: 1;
