新增收藏功能

--- a/pages/home/component/loginForm/style.module.scss
+++ b/pages/home/component/loginForm/style.module.scss
@@ -18,7 +18,7 @@
     width: 160px;
     line-height: 48px;
     color: #fff;
-    background-color: #00ae66;
+    background-color: #1890ff;
     font-size: 20px;
     text-align: center;
     margin: 0 auto;
@@ -29,7 +29,7 @@
     color: red;
   }
   span {
-    color: #00ae66;
+    color: #1890ff;
     display: block;
     width: 60px;
     margin: 10px 0 20px 0;
